tests/snapshots/presenter__presenter_annotations_populated.snap
---
source: tests/presenter.rs
expression: out
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M     main.rs                         ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A       added.rs                      ││    println!("hello");                                    │"
"│    README.┌Annotations (3)───────────────────────────────────────────────────────────┐           │"
"│D   gone.tx│                                                                          │           │"
"│?   scratch│ README.md — Clarify the fallback.                                        │           │"
"│           │ src/app.rs:42 — Explain the ignored result.                              │           │"
"│           │ src/界[2J.rs:42-47 — Unicode 🙂 note with a very long tail that must tr… │           │" Hidden by multi-width symbols: [(19, " "), (44, " ")]
"│           │                                                                          │           │"
"│           └──↑↓/j/k move · Enter/e edit · d delete · D clear · y copy · Esc/q close──┘           │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└annotations: 3──────────────────────────────────────? help┘"
