tests/snapshots/presenter__presenter_discard_confirm_switch.snap
---
source: tests/presenter.rs
expression: out
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││Showing first 5000 lines (truncated)                      │"
"│M     main.rs                         ││delta not found — showing plain diff                      │"
"│    ▾ inner                           ││fn main() {                                               │"
"│A       added.rs                      ││    println!("hello");                                    │"
"│    README.┌Discard annotations?──────────────────────────────────────────────────────┐           │"
"│D   gone.tx│                                                                          │           │"
"│?   scratch│ 1 annotation will be lost:                                               │           │"
"│           │   README.md — Only one.                                                  │           │"
"│           │                                                                          │           │"
"│           └─────────────────y copy & switch · ⏎ switch · esc cancel──────────────────┘           │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────────────────────────────────────────────────────? help┘"
